@@ -5,7 +5,7 @@
   
 insert+n=showGui
 insert+q=quit
-insert+s=speechOnOff
+insert+s=speechMode
 insert+F12=dateTime
 insert+extendedPrior=increaseRate
 insert+extendedNext=decreaseRate
